homework/5.kubernetes-network/rm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-rm-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-rm-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-rm-app
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
          limits:
            cpu: '1'
            memory: 2Gi
