homework/5.kubernetes-network/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: default
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: my-pg-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: my-rm-app
  type: ClusterIP
